src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-ofT-dwF1000-dhP0.5-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    open-floating true\n    default-column-width { fixed 1000; }\n    default-window-height { proportion 0.5; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 360, bounds: 1280 × 720, states: []

post-map configures:
size: 1000 × 360, bounds: 1280 × 720, states: []
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
